--- a/locales/en/tags.json
+++ b/locales/en/tags.json
@@ -1,1 +1,18 @@
-[]
+[
+	{
+		"tag.1.name": "General Purpose",
+		"tag.1.description": "Lists that block tracking and advertising on most of the devices."
+	},
+	{
+		"tag.2.name": "Security",
+		"tag.2.description": "Lists designed specifically to block malicious, phishing, and scam domains."
+	},
+	{
+		"tag.3.name": "Regional",
+		"tag.3.description": "Lists that focus on regional ads and tracking servers."
+	},
+	{
+		"tag.4.name": "Other",
+		"tag.4.description": "Other blocklists."
+	}
+]
