--- a/locales/ca/tags.json
+++ b/locales/ca/tags.json
@@ -1,18 +1,58 @@
 [
 	{
-		"tag.1.name": "",
-		"tag.1.description": ""
+		"hostlisttag.1.name": "",
+		"hostlisttag.1.description": ""
 	},
 	{
-		"tag.2.name": "",
-		"tag.2.description": ""
+		"hostlisttag.4.name": "Altres",
+		"hostlisttag.4.description": ""
 	},
 	{
-		"tag.3.name": "",
-		"tag.3.description": ""
+		"hostlisttag.3.name": "",
+		"hostlisttag.3.description": ""
 	},
 	{
-		"tag.4.name": "Altres",
-		"tag.4.description": ""
+		"hostlisttag.100.name": "",
+		"hostlisttag.100.description": ""
+	},
+	{
+		"hostlisttag.101.name": "",
+		"hostlisttag.101.description": ""
+	},
+	{
+		"hostlisttag.102.name": "",
+		"hostlisttag.102.description": ""
+	},
+	{
+		"hostlisttag.103.name": "",
+		"hostlisttag.103.description": ""
+	},
+	{
+		"hostlisttag.104.name": "",
+		"hostlisttag.104.description": ""
+	},
+	{
+		"hostlisttag.105.name": "",
+		"hostlisttag.105.description": ""
+	},
+	{
+		"hostlisttag.106.name": "",
+		"hostlisttag.106.description": ""
+	},
+	{
+		"hostlisttag.107.name": "",
+		"hostlisttag.107.description": ""
+	},
+	{
+		"hostlisttag.108.name": "",
+		"hostlisttag.108.description": ""
+	},
+	{
+		"hostlisttag.109.name": "",
+		"hostlisttag.109.description": ""
+	},
+	{
+		"hostlisttag.2.name": "",
+		"hostlisttag.2.description": ""
 	}
 ]
