--- a/locales/en/filters.json
+++ b/locales/en/filters.json
@@ -1,6 +1,94 @@
 [
 	{
-		"filter.1.name": "AdGuard DNS filter",
-		"filter.1.description": "Filter composed of several other filters (AdGuard Base filter, Social Media filter, Tracking Protection filter, Mobile Ads filter, EasyList and EasyPrivacy) and simplified specifically to be better compatible with DNS-level ad blocking."
+		"hostlist.1.name": "AdGuard DNS filter",
+		"hostlist.1.description": "Filter composed of several other filters (AdGuard Base filter, Social Media filter, Tracking Protection filter, Mobile Ads filter, EasyList and EasyPrivacy) and simplified specifically to be better compatible with DNS-level ad blocking."
+	},
+	{
+		"hostlist.2.name": "AdAway Default Blocklist",
+		"hostlist.2.description": "AdAway is an open source ad blocker for Android using the hosts file."
+	},
+	{
+		"hostlist.3.name": "Peter Lowe's Blocklist",
+		"hostlist.3.description": "Blocking with ad server and tracking server hostnames."
+	},
+	{
+		"hostlist.4.name": "Dan Pollock's List",
+		"hostlist.4.description": "Blocks certain pop-up traps, prevents user tracking, blocks most advertising."
+	},
+	{
+		"hostlist.5.name": "OISD Blocklist Basic",
+		"hostlist.5.description": "Blocks ads/trackers and prioritizes functionality over blocking."
+	},
+	{
+		"hostlist.23.name": "WindowsSpyBlocker - Hosts spy rules",
+		"hostlist.23.description": "Block spying and tracking on Windows."
+	},
+	{
+		"hostlist.6.name": "Dandelion Sprout's Game Console Adblock List",
+		"hostlist.6.description": "Much like there's now lists for AdGuard Home and Pi-hole to block ads on smart-TVs, here's an attempt from me at doing the same for videogame consoles with AdGuard Home."
+	},
+	{
+		"hostlist.7.name": "Perflyst and Dandelion Sprout's Smart-TV Blocklist",
+		"hostlist.7.description": "This is a blocklist to block smart-TVs sending metadata back home, sometimes with the added benefit of blocking interface ads for apps and movie services."
+	},
+	{
+		"hostlist.13.name": "NOR: Dandelion Sprouts nordiske filtre",
+		"hostlist.13.description": "Dandelion Sprout's Nordic Filters (for AdGuard Home, and for AdGuard for Android/Windows' DNS filtering)."
+	},
+	{
+		"hostlist.14.name": "POL: Polish filters for Pi hole",
+		"hostlist.14.description": "Polish filters for Pi hole."
+	},
+	{
+		"hostlist.15.name": "KOR: YousList",
+		"hostlist.15.description": "Block filter for advertisements, mainly on Korean sites."
+	},
+	{
+		"hostlist.16.name": "VNM: ABPVN List",
+		"hostlist.16.description": "Adblock filter list for Vietnamese."
+	},
+	{
+		"hostlist.17.name": "SWE: Frellwit's Swedish Hosts File",
+		"hostlist.17.description": "Aims to get rid of ads, tracking, scams & badware on (mostly) Swedish websites."
+	},
+	{
+		"hostlist.18.name": "ITA: Filtri-DNS",
+		"hostlist.18.description": "Tentative hosts file for Italian sites created from Easylist Italy and ADB X Files."
+	},
+	{
+		"hostlist.19.name": "IRN: Unwanted Iranian domains",
+		"hostlist.19.description": "List of categorized undesired hosts."
+	},
+	{
+		"hostlist.20.name": "MKD: Macedonian Pi-hole Blocklist",
+		"hostlist.20.description": "This is a list to block unwanted domains that serve ads on Macedonian websites."
+	},
+	{
+		"hostlist.21.name": "CHN: anti-AD",
+		"hostlist.21.description": "Committed to being the highest hit rate ad filtering list in the Chinese region, achieving precise ad blocking and privacy protection."
+	},
+	{
+		"hostlist.22.name": "IDN: ABPindo",
+		"hostlist.22.description": "ABPindo is an additional filter to complement EasyList to block annoying ads on Indonesian and Malaysian language sites."
+	},
+	{
+		"hostlist.10.name": "Scam Blocklist by DurableNapkin",
+		"hostlist.10.description": "A blocklist to protect users against untrustworthy sites."
+	},
+	{
+		"hostlist.11.name": "Online Malicious URL Blocklist",
+		"hostlist.11.description": "A blocklist of malicious websites that are being used for malware distribution, based on the Database dump of Abuse.ch URLhaus."
+	},
+	{
+		"hostlist.12.name": "Dandelion Sprout's Anti-Malware List",
+		"hostlist.12.description": "Dandelion Sprout's Anti-Malware List (for AdGuard Home, and for AdGuard for Android/Windows' DNS filtering)."
+	},
+	{
+		"hostlist.8.name": "NoCoin Filter List",
+		"hostlist.8.description": "This is an adblock list to block browser-based crypto mining."
+	},
+	{
+		"hostlist.9.name": "The Big List of Hacked Malware Web Sites",
+		"hostlist.9.description": "A list of web sites that are hacked with malware, ransomware or trojans."
 	}
 ]
