--- a/locales/it/filters.json
+++ b/locales/it/filters.json
@@ -1,6 +1,94 @@
 [
 	{
-		"filter.1.name": "Filtro DNS di AdGuard",
-		"filter.1.description": "Filtro composto da molti altri (Filtro base di AdGuard, Filtro social media, Filtro annunci per dispositivi, EasyList e EasyPrivacy); semplificato specificatamente per essere maggiormente compatibile con il blocca-annunci a livello DNS."
+		"hostlist.1.name": "Filtro DNS di AdGuard",
+		"hostlist.1.description": "Filtro composto da molti altri (Filtro base di AdGuard, Filtro social media, Filtro annunci per dispositivi, EasyList e EasyPrivacy); semplificato specificatamente per essere maggiormente compatibile con il blocca-annunci a livello DNS."
+	},
+	{
+		"hostlist.2.name": "",
+		"hostlist.2.description": ""
+	},
+	{
+		"hostlist.3.name": "Peter Lowe's Blocklist",
+		"hostlist.3.description": ""
+	},
+	{
+		"hostlist.4.name": "",
+		"hostlist.4.description": ""
+	},
+	{
+		"hostlist.5.name": "",
+		"hostlist.5.description": ""
+	},
+	{
+		"hostlist.23.name": "",
+		"hostlist.23.description": ""
+	},
+	{
+		"hostlist.6.name": "",
+		"hostlist.6.description": ""
+	},
+	{
+		"hostlist.7.name": "",
+		"hostlist.7.description": ""
+	},
+	{
+		"hostlist.13.name": "",
+		"hostlist.13.description": ""
+	},
+	{
+		"hostlist.14.name": "",
+		"hostlist.14.description": ""
+	},
+	{
+		"hostlist.15.name": "",
+		"hostlist.15.description": ""
+	},
+	{
+		"hostlist.16.name": "",
+		"hostlist.16.description": ""
+	},
+	{
+		"hostlist.17.name": "",
+		"hostlist.17.description": ""
+	},
+	{
+		"hostlist.18.name": "",
+		"hostlist.18.description": ""
+	},
+	{
+		"hostlist.19.name": "",
+		"hostlist.19.description": ""
+	},
+	{
+		"hostlist.20.name": "",
+		"hostlist.20.description": ""
+	},
+	{
+		"hostlist.21.name": "",
+		"hostlist.21.description": ""
+	},
+	{
+		"hostlist.22.name": "",
+		"hostlist.22.description": ""
+	},
+	{
+		"hostlist.10.name": "",
+		"hostlist.10.description": ""
+	},
+	{
+		"hostlist.11.name": "Online Malicious URL Blocklist",
+		"hostlist.11.description": ""
+	},
+	{
+		"hostlist.12.name": "",
+		"hostlist.12.description": ""
+	},
+	{
+		"hostlist.8.name": "Lista NoCoin Filter",
+		"hostlist.8.description": ""
+	},
+	{
+		"hostlist.9.name": "",
+		"hostlist.9.description": ""
 	}
 ]
