--- a/locales/ko/filters.json
+++ b/locales/ko/filters.json
@@ -1,6 +1,94 @@
 [
 	{
-		"filter.1.name": "AdGuard DNS 필터",
-		"filter.1.description": "여러 필터 (AdGuard 베이스 필터, 소셜 미디어 필터, 추적 보호 필터, 모바일 광고 필터, EasyList, EasyPrivacy)를 포함하며, 더 나은 DNS 레벨의 필터링을 위해 간소화 된 필터입니다."
+		"hostlist.1.name": "AdGuard DNS 필터",
+		"hostlist.1.description": "여러 필터 (AdGuard 베이스 필터, 소셜 미디어 필터, 추적 보호 필터, 모바일 광고 필터, EasyList, EasyPrivacy)를 포함하며, 더 나은 DNS 레벨의 필터링을 위해 간소화 된 필터입니다."
+	},
+	{
+		"hostlist.2.name": "",
+		"hostlist.2.description": ""
+	},
+	{
+		"hostlist.3.name": "Peter Lowe's Blocklist",
+		"hostlist.3.description": ""
+	},
+	{
+		"hostlist.4.name": "",
+		"hostlist.4.description": ""
+	},
+	{
+		"hostlist.5.name": "",
+		"hostlist.5.description": ""
+	},
+	{
+		"hostlist.23.name": "",
+		"hostlist.23.description": ""
+	},
+	{
+		"hostlist.6.name": "",
+		"hostlist.6.description": ""
+	},
+	{
+		"hostlist.7.name": "",
+		"hostlist.7.description": ""
+	},
+	{
+		"hostlist.13.name": "",
+		"hostlist.13.description": ""
+	},
+	{
+		"hostlist.14.name": "",
+		"hostlist.14.description": ""
+	},
+	{
+		"hostlist.15.name": "",
+		"hostlist.15.description": ""
+	},
+	{
+		"hostlist.16.name": "",
+		"hostlist.16.description": ""
+	},
+	{
+		"hostlist.17.name": "",
+		"hostlist.17.description": ""
+	},
+	{
+		"hostlist.18.name": "",
+		"hostlist.18.description": ""
+	},
+	{
+		"hostlist.19.name": "",
+		"hostlist.19.description": ""
+	},
+	{
+		"hostlist.20.name": "",
+		"hostlist.20.description": ""
+	},
+	{
+		"hostlist.21.name": "",
+		"hostlist.21.description": ""
+	},
+	{
+		"hostlist.22.name": "",
+		"hostlist.22.description": ""
+	},
+	{
+		"hostlist.10.name": "",
+		"hostlist.10.description": ""
+	},
+	{
+		"hostlist.11.name": "온라인 악성 URL 차단 목록",
+		"hostlist.11.description": ""
+	},
+	{
+		"hostlist.12.name": "",
+		"hostlist.12.description": ""
+	},
+	{
+		"hostlist.8.name": "NoCoin 필터 목록",
+		"hostlist.8.description": ""
+	},
+	{
+		"hostlist.9.name": "",
+		"hostlist.9.description": ""
 	}
 ]
