--- a/locales/ar/filters.json
+++ b/locales/ar/filters.json
@@ -1,6 +1,94 @@
 [
 	{
-		"filter.1.name": "مرشح AdGuard DNS",
-		"filter.1.description": "الفلتر يتكون من عدة فلاتر أخرى (مرشح قاعد ادجوارد وفلتر الوسائط الاجتماعية وفلتر حماية التتبع وفلتر إعلانات الجوال و القائمة السهلة و الخصوصية السهلة) وتبسيطه على وجه التحديد ليكون متوافقًا بشكل أفضل مع حظر الإعلانات على مستوى دنس"
+		"hostlist.1.name": "مرشح AdGuard DNS",
+		"hostlist.1.description": "الفلتر يتكون من عدة فلاتر أخرى (مرشح قاعد ادجوارد وفلتر الوسائط الاجتماعية وفلتر حماية التتبع وفلتر إعلانات الجوال و القائمة السهلة و الخصوصية السهلة) وتبسيطه على وجه التحديد ليكون متوافقًا بشكل أفضل مع حظر الإعلانات على مستوى دنس"
+	},
+	{
+		"hostlist.2.name": "",
+		"hostlist.2.description": ""
+	},
+	{
+		"hostlist.3.name": "",
+		"hostlist.3.description": ""
+	},
+	{
+		"hostlist.4.name": "",
+		"hostlist.4.description": ""
+	},
+	{
+		"hostlist.5.name": "",
+		"hostlist.5.description": ""
+	},
+	{
+		"hostlist.23.name": "",
+		"hostlist.23.description": ""
+	},
+	{
+		"hostlist.6.name": "",
+		"hostlist.6.description": ""
+	},
+	{
+		"hostlist.7.name": "",
+		"hostlist.7.description": ""
+	},
+	{
+		"hostlist.13.name": "",
+		"hostlist.13.description": ""
+	},
+	{
+		"hostlist.14.name": "",
+		"hostlist.14.description": ""
+	},
+	{
+		"hostlist.15.name": "",
+		"hostlist.15.description": ""
+	},
+	{
+		"hostlist.16.name": "",
+		"hostlist.16.description": ""
+	},
+	{
+		"hostlist.17.name": "",
+		"hostlist.17.description": ""
+	},
+	{
+		"hostlist.18.name": "",
+		"hostlist.18.description": ""
+	},
+	{
+		"hostlist.19.name": "",
+		"hostlist.19.description": ""
+	},
+	{
+		"hostlist.20.name": "",
+		"hostlist.20.description": ""
+	},
+	{
+		"hostlist.21.name": "",
+		"hostlist.21.description": ""
+	},
+	{
+		"hostlist.22.name": "",
+		"hostlist.22.description": ""
+	},
+	{
+		"hostlist.10.name": "",
+		"hostlist.10.description": ""
+	},
+	{
+		"hostlist.11.name": "",
+		"hostlist.11.description": ""
+	},
+	{
+		"hostlist.12.name": "",
+		"hostlist.12.description": ""
+	},
+	{
+		"hostlist.8.name": "",
+		"hostlist.8.description": ""
+	},
+	{
+		"hostlist.9.name": "",
+		"hostlist.9.description": ""
 	}
 ]
