--- a/locales/en/tags.json
+++ b/locales/en/tags.json
@@ -1,18 +1,58 @@
 [
 	{
-		"tag.1.name": "General Purpose",
-		"tag.1.description": "Lists that block tracking and advertising on most of the devices."
+		"hostlisttag.1.name": "General",
+		"hostlisttag.1.description": "Lists that block tracking and advertising on most of the devices."
 	},
 	{
-		"tag.2.name": "Security",
-		"tag.2.description": "Lists designed specifically to block malicious, phishing, and scam domains."
+		"hostlisttag.4.name": "Other",
+		"hostlisttag.4.description": "Other blocklists."
 	},
 	{
-		"tag.3.name": "Regional",
-		"tag.3.description": "Lists that focus on regional ads and tracking servers."
+		"hostlisttag.3.name": "Regional",
+		"hostlisttag.3.description": "Lists that focus on regional ads and tracking servers."
 	},
 	{
-		"tag.4.name": "Other",
-		"tag.4.description": "Other blocklists."
+		"hostlisttag.100.name": "Norvegian language-specific blocking",
+		"hostlisttag.100.description": "Designed specifically to block ads or other unwanted content in Norvegian language."
+	},
+	{
+		"hostlisttag.101.name": "Polish language-specific blocking",
+		"hostlisttag.101.description": "Designed specifically to block ads or other unwanted content in Polish language."
+	},
+	{
+		"hostlisttag.102.name": "Korean language-specific blocking",
+		"hostlisttag.102.description": "Designed specifically to block ads or other unwanted content in Korean language."
+	},
+	{
+		"hostlisttag.103.name": "Vietnamese language-specific blocking",
+		"hostlisttag.103.description": "Designed specifically to block ads or other unwanted content in Vietnamese language."
+	},
+	{
+		"hostlisttag.104.name": "Swedish language-specific blocking",
+		"hostlisttag.104.description": "Designed specifically to block ads or other unwanted content in Swedish language."
+	},
+	{
+		"hostlisttag.105.name": "Italian language-specific blocking",
+		"hostlisttag.105.description": "Designed specifically to block ads or other unwanted content in Italian language."
+	},
+	{
+		"hostlisttag.106.name": "Iranian language-specific blocking",
+		"hostlisttag.106.description": "Designed specifically to block ads or other unwanted content in Iranian language."
+	},
+	{
+		"hostlisttag.107.name": "Makedonian language-specific blocking",
+		"hostlisttag.107.description": "Designed specifically to block ads or other unwanted content in Makedonian language."
+	},
+	{
+		"hostlisttag.108.name": "Chinese language-specific blocking",
+		"hostlisttag.108.description": "Designed specifically to block ads or other unwanted content in Chinese language."
+	},
+	{
+		"hostlisttag.109.name": "Indonesian language-specific blocking",
+		"hostlisttag.109.description": "Designed specifically to block ads or other unwanted content in Indonesian language."
+	},
+	{
+		"hostlisttag.2.name": "Security",
+		"hostlisttag.2.description": "Lists designed specifically to block malicious, phishing, and scam domains."
 	}
 ]
