--- a/locales/ru/tags.json
+++ b/locales/ru/tags.json
@@ -1,18 +1,58 @@
 [
 	{
-		"tag.1.name": "Общего назначения",
-		"tag.1.description": "Списки, которые блокируют отслеживание и рекламу на большинстве устройств."
+		"hostlisttag.1.name": "General",
+		"hostlisttag.1.description": ""
 	},
 	{
-		"tag.2.name": "Безопасность",
-		"tag.2.description": "Списки, созданные специально для блокировки вредоносных, фишинговых и мошеннических доменов."
+		"hostlisttag.4.name": "Прочее",
+		"hostlisttag.4.description": ""
 	},
 	{
-		"tag.3.name": "Региональные",
-		"tag.3.description": "Списки, которые фокусируются на региональной рекламе и серверах отслеживания."
+		"hostlisttag.3.name": "Региональные",
+		"hostlisttag.3.description": ""
 	},
 	{
-		"tag.4.name": "Прочее",
-		"tag.4.description": "Другие списки блокировки."
+		"hostlisttag.100.name": "",
+		"hostlisttag.100.description": ""
+	},
+	{
+		"hostlisttag.101.name": "",
+		"hostlisttag.101.description": ""
+	},
+	{
+		"hostlisttag.102.name": "",
+		"hostlisttag.102.description": ""
+	},
+	{
+		"hostlisttag.103.name": "",
+		"hostlisttag.103.description": ""
+	},
+	{
+		"hostlisttag.104.name": "",
+		"hostlisttag.104.description": ""
+	},
+	{
+		"hostlisttag.105.name": "",
+		"hostlisttag.105.description": ""
+	},
+	{
+		"hostlisttag.106.name": "",
+		"hostlisttag.106.description": ""
+	},
+	{
+		"hostlisttag.107.name": "",
+		"hostlisttag.107.description": ""
+	},
+	{
+		"hostlisttag.108.name": "",
+		"hostlisttag.108.description": ""
+	},
+	{
+		"hostlisttag.109.name": "",
+		"hostlisttag.109.description": ""
+	},
+	{
+		"hostlisttag.2.name": "Безопасность",
+		"hostlisttag.2.description": ""
 	}
 ]
